validate storage service config rules for both aws and azure